--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Новая папка.loader.js";
+      var loaderUrl = buildUrl + "/arisenBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Новая папка.data.gz",
-        frameworkUrl: buildUrl + "/Новая папка.framework.js.gz",
-        codeUrl: buildUrl + "/Новая папка.wasm.gz",
+        dataUrl: buildUrl + "/arisenBuild.data",
+        frameworkUrl: buildUrl + "/arisenBuild.framework.js",
+        codeUrl: buildUrl + "/arisenBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Arisen",
         productName: "Proto",
