--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/arisenBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/arisenBuild.data.gz",
-        frameworkUrl: buildUrl + "/arisenBuild.framework.js.gz",
-        codeUrl: buildUrl + "/arisenBuild.wasm.gz",
+        dataUrl: buildUrl + "/arisenBuild.data",
+        frameworkUrl: buildUrl + "/arisenBuild.framework.js",
+        codeUrl: buildUrl + "/arisenBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Arisen",
         productName: "Proto",
