--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       }
 
       loadingBar.style.display = "block";
-
+      var unityGame;
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
@@ -103,6 +103,7 @@
           loadingBar.innerHTML = 100 * progress + "%";
           //progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
+          unityGame = unityInstance;
           loadingBar.style.display = "none";
           // fullscreenButton.onclick = () => {
           //   unityInstance.SetFullscreen(1);
